@@ -34,7 +34,7 @@ module Sequel
     
       def execute(sql)
         @logger.info(sql) if @logger
-        @pool.hold {|conn| conn.execute_batch(sql)}
+        @pool.hold {|conn| conn.execute_batch(sql); conn.changes}
       end
       
       def execute_insert(sql)
@@ -122,12 +122,19 @@ module Sequel
     
       def update(values, opts = nil)
         @db.execute update_sql(values, opts)
-        self
       end
     
       def delete(opts = nil)
-        @db.execute delete_sql(opts)
-        self
+        # check if no filter is specified
+        unless (opts && opts[:where]) || @opts[:where]
+          @db.transaction do
+            unfiltered_count = count
+            @db.execute delete_sql(opts)
+            unfiltered_count
+          end
+        else
+          @db.execute delete_sql(opts)
+        end
       end
       
       EXPLAIN = 'EXPLAIN %s'.freeze
