@@ -1,3 +1,9 @@
+=== SVN
+
+* Changed SQLite::Dataset to return affected rows for #delete and #update (#33).
+
+* ADO adapter: Added use of Enumerable for Recordset#Fields, playing it safe and moving to the first row before getting results, and changing the auto_increment constant to work for MSSQL.
+
 === 0.1.9.9 (2007-08-18)
 
 * New ADO adapter by cdcarter (#31).
